fix: fix distortion in webpage for tablets for the homepage of app

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -17,6 +17,7 @@
   border-radius: 15px;
   text-align: center;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 2em;
